<resources>
    <string name="app_name">AlertDialogAssignment</string>
    <string name="programming_mcq">Programming MCQ</string>
    <string name="_1_what_is_your_favorite_programming_language">1. What is your favorite Programming Language?</string>
    <string name="_2_what_technologies_do_you_know">2. What Technologies do you know?</string>
    <string name="_3_which_ides_are_you_familiar_with">3. Which IDEs are you familiar with?</string>
    <string name="_4_do_you_like_open_source">4. Do you like Open Source?</string>
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>
</resources>